--- a/exercícios/ex 015/imagens/fundo002.html
+++ b/exercícios/ex 015/imagens/fundo002.html
@@ -8,8 +8,9 @@
     <style>
         body {
             background-color: black;
+            height: 100vh;
             background-image: url(wallpaper002.jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
         
@@ -19,7 +20,9 @@
             width: 400px;
             padding: 10px;
             border-radius: 15px;
+            margin: auto;
             border: 1px solid blue;
+            
         }
     </style>
 </head>
