--- a/exercícios/ex 015/imagens/fundo002.html
+++ b/exercícios/ex 015/imagens/fundo002.html
@@ -13,11 +13,15 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            background: black url(wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             border-radius: 15px;
             margin: auto;
